--- a/src/main/resources/templates/frontend/test.html
+++ b/src/main/resources/templates/frontend/test.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="ISO-8859-1"/>
-<title>Insert title here</title>
+<title th:text="${test}">mocking text</title>
 </head>
 <body>
-sdfsdafasdfsadf
+<ul>
+	  <li th:each="message : ${messages}">
+    </li>
+</ul>
 </body>
 </html>
