--- a/src/main/resources/templates/fragments/admin/navigation.html
+++ b/src/main/resources/templates/fragments/admin/navigation.html
@@ -51,35 +51,17 @@
                     <!-- /input-group -->
                 </li>
                 <li>
-                    <a th:href="@{/dashboard}"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    <a th:href="@{/backend/dashboard}"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-sitemap fa-fw"></i>Pages<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="#">Second Level Item</a>
+                            <a th:href="@{/post/list}">Manage Pages</a>
                         </li>
                         <li>
-                            <a href="#">Second Level Item</a>
-                        </li>
-                        <li>
-                            <a href="#">Third Level <span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="#">Third Level Item</a>
-                                </li>
-                                <li>
-                                    <a href="#">Third Level Item</a>
-                                </li>
-                                <li>
-                                    <a href="#">Third Level Item</a>
-                                </li>
-                                <li>
-                                    <a href="#">Third Level Item</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-third-level -->
+                            <a th:href="@{/post/new}">Add New Page</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
