--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,7 +4,7 @@ h1 {
 
 footer {
     position: fixed;
-    height: 50px;
+    height: auto;
     bottom: 0;
     width: 100%;
     background-color: #ccc
