--- a/src/main/resources/templates/layouts/frontend/layout.html
+++ b/src/main/resources/templates/layouts/frontend/layout.html
@@ -6,16 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}"/>
+    <!-- Custom fonts for this template -->
+    <link th:href="@{/fonts/font-awesome/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/simple-line-icons.css}" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- Custom styles for this template -->
+    <link href="css/landing-page.min.css" rel="stylesheet">
 
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Spring Blog</title>
 </head>
 <body>
     <th:block th:replace="fragments/header :: header"/>
-    <div class="container">
         <th:block layout:fragment="content"/>
-    </div>
     <th:block th:replace="fragments/footer :: footer"/>
+    <th:block th:replace="fragments/login-modal :: login-modal"/>
+
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.3.1/jquery.min.js/}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.min.js}"></script>
 </body>
 </html>
